Ultrathink UX Polish: Cinematic UI, Glassmorphism, and Input Refinement

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       </div>
     </div>
 
+    <div id="transition-overlay"></div>
+    <div id="app"></div>
+
     <!-- Main UI (HUD) -->
     <div id="ui" class="hidden">
       <!-- Zone Label (Center) -->
@@ -37,6 +40,32 @@
           <p>Drag to Move & Look</p>
         </div>
       </div>
+
+      <!-- Settings Button (Top Right) -->
+      <div id="settings-btn">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <circle cx="12" cy="12" r="3"></circle>
+          <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+        </svg>
+      </div>
+
+      <!-- Settings Menu (Hidden) -->
+      <div id="settings-menu" class="hidden">
+        <div class="menu-content">
+          <h2>PAUSE</h2>
+          <button id="resume-btn">RESUME</button>
+          <button id="audio-btn">MUTE AUDIO</button>
+          <div class="controls-reminder">
+            <div class="desktop-hint">
+              <p>WASD / Arrows to Move</p>
+              <p>Mouse to Look</p>
+            </div>
+            <div class="mobile-hint">
+              <p>Drag to Move & Look</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Mobile Touch Indicator -->
@@ -44,9 +73,7 @@
       <div class="ring"></div>
       <div class="dot"></div>
     </div>
-
-    <div id="transition-overlay"></div>
-    <div id="app"></div>
+    <div id="grain-overlay"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
