feat: Add Zone Subtitles and Field Notes for UX Enrichment

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <!-- Zone Label (Center) -->
       <div id="zone-label-container">
         <div id="zone-label"></div>
+        <div id="zone-subtitle"></div>
+      </div>
+
+      <!-- Field Notes (Bottom Center) -->
+      <div id="field-note-container">
+        <p id="field-note-text"></p>
       </div>
 
       <!-- Controls Hint (Bottom Left/Right) -->
