Implement unified navigation controls for Desktop (WASD/Mouse) and Mobile (Touch)
- Implemented WASD + Arrow Key support for movement
- Added Mouse Look via Pointer Lock API
- Added Jump (Space) and Sprint (Shift) mechanics
- Implemented Mobile Touch Controls: Left 30% Joystick, Right 70% Drag-Look
- Updated CameraRig with basic physics (gravity, jumping, ground collision)
- Updated UI overlays in index.html to display control hints
- Verified with Playwright automation

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
       <div id="controls-hint">
         <div class="desktop-hint">
           <p><span class="key">WASD</span> / <span class="key">Arrows</span> to Move</p>
+          <p><span class="key">Space</span> Jump / <span class="key">Shift</span> Sprint</p>
           <p>Mouse to Look</p>
         </div>
         <div class="mobile-hint">
-          <p>Left Stick: Move &nbsp;|&nbsp; Right Stick: Look</p>
+          <p>Left Stick: Move &nbsp;|&nbsp; Right: Drag to Look</p>
         </div>
       </div>
 
@@ -70,10 +71,11 @@
           <div class="controls-reminder">
             <div class="desktop-hint">
               <p>WASD / Arrows to Move</p>
+              <p>Space Jump / Shift Sprint</p>
               <p>Mouse to Look</p>
             </div>
             <div class="mobile-hint">
-              <p>Left Stick: Move &nbsp;|&nbsp; Right Stick: Look</p>
+              <p>Left Stick: Move &nbsp;|&nbsp; Right: Drag to Look</p>
             </div>
           </div>
         </div>
